[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vshyde"
version = "0.1.0"
description = "High-throughput Hybridization Detection Pipeline"
readme = "README.md"
authors = [{ name = "Jian He", email = "your.email@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "ete3",
    "Pillow",
    "scipy",
    "multiprocess",
    "phyde @ git+https://github.com/pblischak/HyDe.git",
]
requires-python = ">=3.7"

[project.scripts]
vshyde = "vshyde.pipeline:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/vshyde"
